# piano_decoder

./: .gitignore  README.md  final_project_v2.xpr
constraints/: zybo_audio_eth.xdc
final_project_v2.srcs/sources_1/bd/design_1/: design_1.bd
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_axi_iic_0_0/: design_1_axi_iic_0_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_clk_wiz_0_0/: design_1_clk_wiz_0_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_piano_note_detect_0_0/: design_1_piano_note_detect_0_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_proc_sys_reset_0_0/: design_1_proc_sys_reset_0_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_processing_system7_0_0/: design_1_processing_system7_0_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_smartconnect_0_0/: design_1_smartconnect_0_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_xlconstant_0_0/: design_1_xlconstant_0_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_xlconstant_1_0/: design_1_xlconstant_1_0.xci
final_project_v2.srcs/sources_1/bd/design_1/ip/design_1_zybo_audio_in_0_0/: design_1_zybo_audio_in_0_0.xci
gui/: piano_note_gui.py
ip_repo/piano_note_detect/: component.xml
ip_repo/piano_note_detect/src/: piano_note_detect.vhd  piano_note_tables_pkg.vhd
ip_repo/piano_note_detect/xgui/: piano_note_detect_v1_0.tcl
ip_repo/zybo_audio_in/: component.xml
ip_repo/zybo_audio_in/src/: zybo_audio_in.vhd
scripts/: check_methodology_after_clock_fix.tcl  create_design_1_bd.tcl  package_custom_ips.tcl  run_impl_1.tcl  run_packaged_piano_note_detect_synth.tcl  run_piano_note_detect_ooc_synth.tcl  run_piano_note_detect_tb.tcl  run_synth_1.tcl
sim/: piano_note_detect_tb.vhd
sw/hello_world/src/: CMakeLists.txt  app.yaml
sw/piano_udp_app/src/: CMakeLists.txt  UserConfig.cmake  app.yaml  piano_note_protocol.h  piano_udp_app.c  platform.c  platform.h
